--- a/snatchsolutions/main.css
+++ b/snatchsolutions/main.css
@@ -1,3 +1,4 @@
+/* Index.html */
 html, body {
     height: 100%;
   }
@@ -19,3 +20,42 @@ body {
     color: white;
     font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
+
+.pad-text{
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+  .mar-pic{
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  @media only screen and (max-width: 469px){
+    .pad-text{
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+    .mar-pic{
+      margin-left: 1rem;
+      margin-right: 1rem;
+      width:50%;
+    }
+  }
+
+/* Login.html */
+.align-form{
+    display: flex;
+    align-self: center;
+  }
+  .mar-form{
+    width: 30rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+  @media only screen and (max-width: 469px){
+    .mar-form{
+    width: 20rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+  }
