--- a/snatchsolutions/main.css
+++ b/snatchsolutions/main.css
@@ -59,3 +59,13 @@ body {
     margin-right: 1rem;
   }
   }
+
+/* Budget Console */
+.mar-content{
+  margin: 2rem 2rem 2rem 2rem;
+}
+@media only screen and (max-width: 469px){
+.mar-content{
+  margin: 0;
+}
+}
