--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,9 @@
 /* Index.html */
-html, body {
+html, .body {
     height: 100%;
   }
 
-body {
+.body {
     display: flex;
     flex-direction: column;
 }
