All routes set up and functioning

--- a/src/app.css
+++ b/src/app.css
@@ -8,6 +8,11 @@ html, .body {
     flex-direction: column;
 }
 
+.expand {
+  display: flex;
+  flex-direction: column;
+}
+
 .content {
     flex: 1 0 auto;
 }
