--- a/src/app.css
+++ b/src/app.css
@@ -14,7 +14,9 @@ html, .body {
 }
 
 .content {
-    flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 auto;
 }
 
 .footer {
